# django-rest-envelope

./: .pre-commit-config.yaml  README.md  pyproject.toml  test-requirements.txt
.github/workflows/: testing.yml
rest_envelope/: decorators.py  mixins.py
testing/: urls.py  views.py
tests/: test_mixin.py
